[project]
name = "questioncache"
version = "0.1.0"
description = "A cacheing CLI for quickly asking questions of LLMs"
readme = "README.md"
requires-python = "==3.12"
dependencies = [
    "llm>=0.16",
    "rich>=13.9.3",
    "sqlite-utils>=3.37",
    "appdirs>=1.4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
]
