[project]
name = "llm-questioncache"
version = "0.1.0"
description = "A cacheing CLI for quickly asking questions of LLMs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "llm>=0.16",
    "sqlite-utils>=3.37",
    "click",
    "click-default-group>=1.2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points.llm]
qc = "llm_questioncache"

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "llm-smollm2>=0.1.2",
]
