[project]
name = "llm-questioncache"
version = "0.1.0"
description = "A cacheing CLI for quickly asking questions of LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llm>=0.16",
    "sqlite-utils>=3.37",
    "click",
    "click-default-group>=1.2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points.llm]
qc = "llm_questioncache"

[tool.uv]
dev-dependencies = [
    "llm-gguf>=0.2",
    "llm-smollm2>=0.1.2",
 "pytest>=8.3.4",
]
